# rust-js-wasm-template

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/js_examples/: index.js  package.json
examples/python_examples/: sample_usage_python.py
src/: core.rs  js_module.rs  js_utils.rs  lib.rs  python_module.rs
